--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
 
+<html>
+  <head>
+    <title>Testing</title>
+    <style>
+      header {
+        background-color:black;
+      }
+      h1 {
+        color:white;
+      }
+      h4 {
+        color:white;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>Testing it out</h1>
+      <h4>Lalalalallala</h4>
+    </header>
+  </body>
+</html>
